assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,500;1,100&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */

html, body {
    min-height: 100vh;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #000000;
    font-family: 'Montserrat', sans-serif;
} 

/* Header */

header {
    background-color: #e8e8e8;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

/* Logo and navigation Menu */


#logo {
    margin-left: 50px;
    margin-top: 0;
    width: auto;
    max-width: 200px;

}

#menu {
    margin-right: 50px;
    margin-bottom: 50px;
    font-size: 145%;
    letter-spacing: 12px;
    text-transform: uppercase;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #000000;
    color: inherit;
    }

.active {
    border-bottom: 1px solid #000000;
}

#menu li {
    list-style-type: none;
    display: inline;
    margin-left: 30px;
}

/* Navbar dropdown toggle */

nav {
    position: absolute;
    background-color: #e8e8e8;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    display: none;
    top: 100%;
}

/* Nav toggle */

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 4rem;
}

/* Main content */

main {
    background-color: #e8e8e8;
    flex: 1 0 auto;
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    
}

/* Home section */

.home {
    background-image: url(../pictures/home2.jpg);
    background-blend-mode: multiply;
    background-size: cover;
    background-position: center;
    height: 80vh;
    margin-top: 50px;
    margin-bottom: 1px;
}

.home-text {
    width: 300px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
    text-transform: uppercase;
    text-align: center;
    font-size: 90%;
    letter-spacing: 10px;
    margin-top: 250px;
    padding: 10px;
    color: #000000;
}

.button-home {
    margin-top: 20px;
    border-radius: 10px;
    padding: 15px 25px 15px 25px;
    text-align: center;
    font-size: 100%;
    background-color: rgba(255, 255, 255, 0.3);;
    color: #000000;
    display: block;
    cursor: pointer;
    letter-spacing: 10px;
    text-transform: uppercase;
}

.button-home:hover {
    background-color: #8f8e8e8c;
    color: #000000;
    cursor: pointer;
}

/* About section */

.about-container {
    background-color: #e8e8e8;
}


.about-text {
    padding: 5%;
}

.about-text h1 {
    letter-spacing: 7px;
    text-transform: uppercase;
    margin-bottom: 30px;
}

.about-text p {
    background-color: #FFFFFF;
    padding: 20px;
    justify-content: center;
}

.about-info ul {
    line-height: 30px;
    list-style-type: none;
}

/* Portfolio section */

#photos img {
    width: 100%;
    height: auto;
    line-height: 2rem;
}

#photos {
    line-height: 2rem;
}

/* Inquiry Form */

.contact {
    clear: left;
    background-image: url(../pictures/bg5.jpg);
    background-blend-mode: multiply;
    background-size: cover;
    background-position: center;
    height: 80vh;
    margin-top: 50px;
    margin-bottom: 1px;
}

.inquiry-form {
    margin: 150px 10% 0 0;
    color: #000000;
    background-color: rgba(255, 255, 255, 0.6);
    max-width: 500px;
    position: absolute;
    padding: 30px;
    left: 10%;
}

.inquiry-form h2 {
    color: #000000;
    margin-bottom: 20px;
    letter-spacing: 4px;
    text-transform: uppercase;
}

.text-input {
    background: transparent;
    color: #000000;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid #000000;
    border-radius: 2px;
}

.text-input:hover {
    border-color: #8f8e8e8c;
}

#message {
    height: 75px;
}

.button {
    margin-top: 20px;
    border-radius: 6px;
    padding: 10px 20px 10px 20px;
    text-align: center;
    font-size: 100%;
    background-color: #e8e8e8;
    color: #000000;
    display: block;
    cursor: pointer;
    letter-spacing: 5px;
    text-transform: uppercase;
}

.button:hover {
    background-color: #8f8e8e8c;
    color: #000000;
    cursor: pointer;
}

.form-section input[type="submit"] {
    cursor: pointer;
}

#thank-you {
    max-width: 800px;
}

/* Footer */

footer {
    background-color: #e8e8e8;
}

/* Google Maps from About section */

iframe {
    width: 100%;
    height: 200px;
    border: none;
    filter: grayscale(100%);
}

/* Contacts from About section */

#contacts {
    margin-bottom: 70px;
    letter-spacing: 4px;
    text-transform: uppercase;
    line-height: 2rem;
    text-align: center;
}

#contacts ul {
    line-height: 30px;
    list-style-type: none;
}

#contacts i {
    padding-right: 20px;
}

/* Social media icons alignment */

#social {
    list-style-type: none;
    justify-content: space-evenly;
    display: flex;
    text-align: center;
    padding: 25px 0;
}




/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {

    /* Portfolio */
    #photos {
        column-count: 2;
        column-gap: 1rem;
    }
}

/* Media query: for devices 992px and up) */
@media screen and (min-width: 992px) {

    /* Portfolio */
    #photos {
        column-count: 4;
        column-gap: 1rem;
    }
}

/* Media query: for devices 992px and up */
@media screen and (min-width: 1147px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        line-height: 75px;
        margin: 0 0.5rem;
    }
}

/* Media query: for devices 1200px and up */
@media screen and (min-width: 1200px) {

    /* Reasons section */
    #about-container {
        display: flex;
        flex-direction: row;
    }

    #about-container>div {
        flex: 1;
    }

    #pic-ctn {
        order: 0
    }

    #about-text {
        order: 1;
    }
}

